--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "clear && nodemon index.js"
+    "start": "clear && nodemon index.js",
+    "fake": "clear && node generate_fake_date.js"
   },
   "keywords": [],
   "author": "",
