--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.0.0",
     "@angular/material": "^17.3.8",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "luxon": "^3.4.4",
+    "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
