--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "luxon": "^3.4.4",
     "ngx-material-timepicker": "^13.1.1",
+    "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
