--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "aws-sdk": "^2.1632.0",
+    "global": "^4.4.0",
     "luxon": "^3.4.4",
     "ngx-material-timepicker": "^13.1.1",
     "ngx-owl-carousel-o": "^17.0.0",
