--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "clear && nodemon index.js",
-    "fake": "clear && node generate_fake_date.js"
+    "fake": "clear && node ./utils/generate_fake_date.js"
   },
   "keywords": [],
   "author": "",
