--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "aws-sdk": "^2.1632.0",
+    "chart.js": "^4.4.3",
     "global": "^4.4.0",
     "luxon": "^3.4.4",
     "ngx-material-timepicker": "^13.1.1",
